@@ -3,15 +3,16 @@
 \newcommand{\ghpr}{\href{https://github.com/RcppCore/Rcpp/pull/#1}{##1}}
 \newcommand{\ghit}{\href{https://github.com/RcppCore/Rcpp/issues/#1}{##1}}
 
-\section{Changes in Rcpp hotfix release version 1.0.8.2 (2022-03-09)}{
+\section{Changes in Rcpp hotfix release version 1.0.8.2 (2022-03-10)}{
   \itemize{
     \item Changes in Rcpp API:
     \itemize{
       \item Accomodate C++98 compilation by adjusting attributes.cpp (Dirk in
       \ghpr{1193} fixing \ghit{1192})
-      \item Accomodate newest compilers by replacing deprecated
+      \item Accomodate newest compilers replacing deprecated
        \code{std::unary_function} and \code{std::binary_function} with
-       \code{std::function} (Dirk fixing \ghit{1201} and CRAN request)
+       \code{std::function} (Dirk in \ghpr{1202} fixing \ghit{1201} and
+       CRAN request)
     }
     \item Changes in Rcpp Documentation:
     \itemize{
