@@ -1,7 +1,15 @@
-2022-03-09  Dirk Eddelbuettel  <edd@debian.org>
+2022-03-10  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll minor version
 	* inst/include/Rcpp/config.h: Idem
+
+	* inst/tinytest/cpp/sugar.cpp: Also conditionally replace
+	std::unary_function with std::function
+	* vignettes/rmd/Rcpp-sugar.Rmd: Replace std::unary_function example
+	with std::function (implicitly requiring C++ in vignette example)
+	* vignettes/rmd/Rcpp-FAQ.Rmd: Idem
+
+2022-03-09  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/include/Rcpp/Language.h: To quieten compilations, replace
 	std::(unary|binary)_function with std::function for C++11 or later
